Fix vertical alignment not working

--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -22,6 +22,7 @@
    ============================================================================================== */
 
 .c-modal__overlay {
+	display: flex;
 	position: absolute;
 	top: 0;
 	right: 0;
